# BtYacc

./: CMakeLists.txt  Makefile  README.Debian  btyacc-c.ske  btyacc.1  btyacc.sgml  btyaccpa.ske  build.h.in  changelog  closure.c  control  copyright  defs.h  error.c  lalr.c  log.c  log.h  lr0.c  main.c  makefile.dos  menu  mkpar.c  mstring.c  output.c  postinst  prerm  reader.c  readskel.c  rules  skel2c  symtab.c  verbose.c  warshall.c  watch  write.c  write.h
